tests/accept/instantiate.lc
main' =
    let f = PrimAdd in f (V2 1.0 2.0) (V2 1.0 2.0)
