tests/reject/instantiate.lc
main = let f = PrimAdd in (f (V2 1.0 2.0) (V2 2.3 3.4), f 1.0 2.0)
